Changelog
=========

2.11 (unreleased)
-----------------

- Nothing changed yet.


2.10 (2012-06-19)
-----------------

- Temporary logging with much higher severity who gets notification mails
  [gerken]


2.9 (2012-06-15)
----------------

- Changed citation strings. refs #4022
  [do3cc]
- Added external script to recreate preview images
  [deroiste]


2.8 (2012-05-05)
----------------

- Ensure that the pdf preview images are flattened and given white
  background (newer versions of imagemagick do this by default) #4422
  [deroiste]


2.7 (2012-03-04)
----------------

- Nothing changed yet.


2.6 (2012-02-08)
----------------

- Nothing changed yet.


2.5 (2012-01-18)
-------------------

- redirect-to-publication: redirects from an Issue or Volume to the
  relevant part of the Publication listing page #3985 [deroiste]
- Don't display "Pages: 0" when page_start and page_end are set to 0
  during bulk import, refs #4054 [deroiste]

2.4 (2011-12-20)
----------------

- Only display an Issue title for the CompletedPdf when the is a
  relevant Issue #3985 [deroiste]
- Include the translation for "(ed.)" #4031 [deroiste]

2.3 (2011-12-13)
----------------

- Translate "p." in the citation string #3956 [deroiste]

2.2 (2011-11-17)
----------------

- Adding a guard on the example content setup handler to avoid it running when installing extra products
  (deroiste)
- changed subject to lineswidget for performance
  (pilz)

2.1 (2011-11-14)
----------------

- Changed PagePreview image to a blob [pilz]
- Bugfix, empty metadata fields being shown [deroiste] #3924
- Only display links box for Presentations [deroiste] #3118

2.0 (2011-11-08)
----------------

- Phase 2


2.0b2 (2011-10-24)
------------------

- Second beta release for phase 2


2.0b1 (2011-10-13)
------------------

- LF000.2 Display the original source URL as a clickable link #3101
  [deroiste]
- LF000.4 call the original url via an iframe if it is from Francia
  #3103 [deroiste]